[package]
name = "BananoQR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
qrcode = "0.12.0"
image = "0.23.14"
imageproc = "0.23"
qrcode-generator = "4.1.9"
